@@ -6,6 +6,7 @@ version 0.7.2 - xxx
  . AtlasSprite & Sprite: don't auto center sprite when setting frame (issue #281)
  . AtlasSpriteManager: supports transformations (issue #308)
  . AtlasSpriteManager: fixes in removeChild (issue #296)
+ . AtlasSpriteManager: works with capacity=1 (issue #305)
  . CocosNode: CocosNodeExtras merged into CocosNode (issue #292)
  . CocosNode: improved runAction/stopAction (issue #300)
  . CocosNode: possible memory leak when running actions (issue #298)
@@ -14,9 +15,12 @@ version 0.7.2 - xxx
  . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
  . Demos: organized tests folder (issue #280)
  . Demos: Atlas and Sprites uses TintBy and TintTo (issue #204)
+ . Demos: Menu shows how to use padding (part of issue #249)
  . Director: Attach uses 'bounds' not 'frame' (issue #233)
  . Documentation: API doc documents free functions (issue #314)
  . Menu: an empty menu can be crated (issue #277)
+ . Menu: supports padding (issue #249)
+ . Menu: alignItemsVertically aligns items on the center of the screen (issue #315)
  . Particles: Use by default fire.pvr (issue #276)
  . Particles: resetSystem actually resets the system (issue #252)
  . Particles: texture is a property (issue #282)
